# Proyecto_IngChar_MCD_SM-E

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: adol_datos_procesados.ipynb  adul_datos_procesados.ipynb  descarga_datos_y_catalogos.ipynb
references/: CCPV_links.txt  ENAPE_links.txt  ENOE_links.txt
references/descriptions/: CCPV_description.txt  ENAPE_description.txt  ENOE_description.txt  SEP_description.txt
references/links/: CCPV_links.txt  ENAPE_links.txt  ENOE_links.txt  SEP_links.txt
salud_mental-educacion/: Untitled.ipynb  __init__.py  dataset.py  education_dataset.py  features.py  plots.py
salud_mental-educacion/modeling/: predict.py  train.py
