[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "salud_mental-educacion"
version = "0.0.1"
description = "Proyecto para la maestr\u00eda en ciencia de datos. Se analiza una posible relaci\u00f3n entre el campo de salud mental y el de educaci\u00f3n."
authors = [
  { name = "CIRETT TORRES FEDERICO MIGUEL, GARC\u00cdA MUNDO KEVIN, VEGA ROBLES SEBASTIAN ISAAC" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["salud_mental-educacion"]
force_sort_within_sections = true
